--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,25 @@
         <java.version>1.8</java.version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
     </properties>
-    <repositories>
+<!--    <repositories>-->
 
-            <repository>
-                <id>my-internal-site</id>
-                <url>http://192.168.185.190:8081/</url>
-            </repository>
+<!--            <repository>-->
+<!--                <id>my-internal-site</id>-->
+<!--                <url>http://192.168.185.190:8081/</url>-->
+<!--            </repository>-->
 
-    </repositories>
+<!--    </repositories>-->
+    <distributionManagement>
+
+        <repository>
+
+            <id>deploymentRepo</id>
+
+            <url>http://192.168.185.190:8081/repository/maven-releases/</url>
+
+        </repository>
+
+    </distributionManagement>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
